--- a/image-metadata.mdx
+++ b/image-metadata.mdx
@@ -15,6 +15,14 @@ These placeholders are not expanded in the Markdown itself.
 
 Instead, the corresponding metadata is provided separately in the `image_metadata` field of the API response.
 
+---
+
+## How to Enable
+
+To enable this feature, set `imageMetadataDetect: true` in your API request. By default, this parameter is set to `false`.
+
+--- 
+
 ## How It Works
 
 - **Markdown output**: contains `[Figure N]` placeholders (e.g., `[Figure 1]`, `[Figure 2]`)
