--- a/signature.mdx
+++ b/signature.mdx
@@ -3,10 +3,10 @@ title: "Signature Detection"
 description: "Detect and extract signatures from documents, including signer metadata."
 ---
 
-### Signature Detection
+## Overview
 
 Cardinal can automatically detect **signatures** within documents.  
-For each detected signature, you’ll receive:  
+For each detected signature, you'll receive:  
 
 - **`signature_url`** – a cropped image of the detected signature.  
 - **`is_signature`** – whether the region is confirmed to be a signature (`"yes"` or `"no"`).  
@@ -14,17 +14,17 @@ For each detected signature, you’ll receive:
 
 ---
 
-### Post-Processing
+## How to Enable
 
-Signature detection requires **post-processing** to be enabled.  
+To enable signature detection, set `signatureDetect: true` in your API request.
 
-- Default: `post_processing_on = false`  
-- To **enable** signature detection (and other advanced passes), set `post_processing_on = true`.  
-- ⚠️ Enabling post-processing will **add latency** to your requests, since additional detection passes are run.  
+- Default: `signatureDetect = false`  
+- To **enable** signature detection, set `signatureDetect = true`.  
+- ⚠️ Enabling signature detection will **add latency** to your requests, since additional detection passes are run.  
 
 ---
 
-### Example Response (excerpt)
+## Example Response
 
 ```json
 {
@@ -44,4 +44,4 @@ This enables use cases like:
 - Identifying who signed a document.
 - Automating compliance workflows that require signature verification.
 
-<Note> Signature detection is included in the JSON output alongside other extracted elements such as tables, barcodes, and figures. </Note> 
+<Note> Signature detection is included in the JSON output alongside other extracted elements such as tables, barcodes, and figures. </Note>
