--- a/authentication/index.mdx
+++ b/authentication/index.mdx
@@ -10,9 +10,8 @@ Every request must include your API key or it will be rejected.
 
 ## Obtaining an API Key
 
-1. Log into the [Cardinal Dashboard](https://dashboard.cardinal.ai)  
-2. Navigate to **Settings → API Keys**  
-3. Create a new API key or copy an existing one  
+1. Log into the [Cardinal Home Page](https://dashboard.cardinal.ai/home)  
+2. Create a new API key or copy an existing one  
 
 **Important**: Keep your API keys secure. Do not share them publicly, and rotate them regularly. If a key is compromised, revoke it immediately from the dashboard.
 
