--- a/enterprise/vpc-deploy/aws.mdx
+++ b/enterprise/vpc-deploy/aws.mdx
@@ -307,4 +307,4 @@ aws logs tail /ecs/cardinal-task --follow
 ```
 
 ### CloudWatch Metrics
-Access CPU, memory, and network metrics through the AWS Console under ECS → Clusters → cardinal-cluster → Metrics.
+Access CPU, memory, and network metrics through the AWS Console under ECS → Clusters → cardinal-cluster → Metric
