--- a/enterprise/security/compliance.mdx
+++ b/enterprise/security/compliance.mdx
@@ -16,13 +16,13 @@ We are actively undergoing audits and maintaining certifications that matter to 
 - **Penetration Test** → Completed by Oneleet  
 
 You can view all reports and documentation here:  
-**https://trust.delve.co/leafpress**
+**https://trust.delve.co/cardinal**
 
 ---
 
 ## Access
 
-1. Open the trust portal: **https://trust.delve.co/leafpress**
+1. Open the trust portal: **https://trust.delve.co/cardinal**
 2. Log in with your approved credentials.
 3. Browse the compliance reports, policies, and attestations.
 
