--- a/markdown.mdx
+++ b/markdown.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Markdown Extraction"
+title: "Parse"
 description: "Extract clean Markdown from documents using Cardinal."
 ---
 
-## Overview
+### Overview
 
 Cardinal can convert PDFs and images into **clean, structured Markdown**.  
 This mode is built on the `/process` endpoint and is the default output format.
@@ -14,9 +14,9 @@ This mode is built on the `/process` endpoint and is the default output format.
 
 ---
 
-## Coverage
+### Coverage
 
-When converting to Markdown, Cardinal handles:
+Cardinal handles:
 
 - ✅ **Annotations**  
 - ✅ **Checkmarks**  
@@ -44,6 +44,6 @@ All of these are preserved in the Markdown/HTML output.
 **Notes:**
 - Text, headers, and paragraphs are flattened into Markdown/HTML inside the `content` field.
 
-## API Reference
+**API Reference**
 
 <Card title="Process File API" href="api-reference/endpoint/process" icon="code" />
