--- a/recipes/json-extraction.mdx
+++ b/recipes/json-extraction.mdx
@@ -1,5 +1,5 @@
 ---
-title: "JSON Extraction"
+title: "Healthcare Workflows"
 description: "Use JSON extraction to communicate with documents and get precise answers."
 ---
 
