--- a/recipes/rag-implementation.mdx
+++ b/recipes/rag-implementation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "RAG Implementation"
+title: "Knowledge Base"
 description: "Extract data in intelligent chunks optimized for Retreival-augmented generation and semantic search. Great for Knowledge bases, chatbots, etc."
 ---
 
