--- a/classify-split.mdx
+++ b/classify-split.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Classify & Split"
+title: "Partition"
 description: "Lightweight page classification to tag and separate documents by metadata."
 ---
 
-### Classify & Split
+### Partition
 
 Cardinal supports a **lightweight page classification mode** that scans each page to assign metadata and categories **without running full extraction**.  
 
@@ -15,7 +15,7 @@ Instead of extracting everything, you can first **classify pages**, then choose 
 
 ### Benefits
 
-- **Lower credit usage** – classification is cheaper than full extraction.  
+- **Lower cost** – classification is cheaper than full extraction.  
 - **Flexible metadata** – define any categories you need (`"DoctorNotes"`, `"Insurance"`, `"CRO"`, etc.).  
 - **Selective processing** – only run full extraction on the pages that matter.  
 - **Automatic splitting** – optionally split large PDFs into smaller files by category.  
@@ -32,6 +32,5 @@ Instead of extracting everything, you can first **classify pages**, then choose 
 ---
 
 <Note>
-**Beta:** Want to use it? Email **team@trycardinal.ai** — **Classify & Split** is currently in beta.  
-It runs as a **pre-pass** that consumes fewer credits than full extraction and helps decide which pages to process further.
+**Beta:** Want to use it? Email **team@trycardinal.ai** — **Partition** is currently in beta.  
 </Note>
