--- a/index.mdx
+++ b/index.mdx
@@ -1,122 +1,65 @@
 ---
-title: "Introduction"
-description: "Complete guide to Cardinal's high-performance OCR and document intelligence platform"
----
-
-Cardinal transforms messy PDFs, images, and scanned files into structured, reliable data you can use immediately. From JSON extraction to RAG pipelines, Cardinal gives you the building blocks to automate document processing without constraints.
+title: "Cardinal API"
+description: "Transform any document into structured data"
 
 ---
 
-## File Types & Input Formats
+## Building Blocks
 
-Cardinal accepts a wide range of document formats for processing:
+Cardinal's core API endpoints for document processing and data extraction:
 
 <CardGroup cols={3}>
-  <Card title="PDFs" icon="file-pdf" href="/file-types">
-    Native PDFs, scanned documents, multi-page files, and password-protected PDFs
+  <Card title="Partition" icon="scissors" href="/partition">
+    Partition documents into custom sections and separate multi-page files
   </Card>
-  <Card title="Images" icon="image" href="/file-types">
-    PNG, JPEG, TIFF, WebP, and other common image formats
+  <Card title="Schema Extract" icon="database" href="/json">
+    Extract structured data using custom schemas with precise field mapping
   </Card>
-  <Card title="Scanned Documents" icon="scanner" href="/file-types">
-    High-resolution scans, photos of documents, and legacy paper files
+  <Card title="Parse" icon="file-code" href="/markdown">
+    Convert documents to clean markdown while preserving structure
+  </Card>
+  <Card title="Bounding Box" icon="square" href="/bounding-boxes">
+    Get precise coordinates for text, tables, and visual elements
   </Card>
 </CardGroup>
 
-## Output Formats
+## Accessories
 
-Transform your documents into structured data with multiple output options:
+Enhanced processing capabilities and specialized tools:
 
 <CardGroup cols={3}>
-  <Card title="Markdown" icon="markdown" href="/markdown">
-    High-fidelity conversion with tables, annotations, bounding boxes, and image embeds
+  <Card title="Image Metadata" icon="image" href="/image-metadata">
+    Advanced OCR for images and scanned documents with high accuracy
   </Card>
-  <Card title="JSON" icon="brackets-curly" href="/json">
-    Schema-first extraction, arrays, long PDFs, null fallbacks, and data mapping
+<Card title="Barcode Detection" icon="qrcode" href="/barcode">
+  Extract barcode data and QR codes from documents and images
+</Card>
+<Card title="Signature Detection" icon="pen" href="/signature">
+  Detect and extract signatures from documents with verification capabilities
+</Card>
+<Card title="Dense PDF Processing" icon="file-pdf" href="/dense-tables">
+  Extract complex tables and structured data from dense PDF documents
+</Card>
+  <Card title="Figure Metadata" icon="chart-simple" href="/coming-soon">
+    Extract metadata from charts, tables, and embedded visual elements
   </Card>
-  <Card title="Bounding Boxes" icon="vector-square" href="/bounding-boxes">
-    Precise coordinate data for text, tables, and visual elements
-  </Card>
-</CardGroup>
-
-## What We Detect & Key Features
-
-Cardinal's intelligent processing capabilities include:
-
-<CardGroup cols={2}>
-  <Card title="Bounding Boxes" icon="vector-square" href="/bounding-boxes">
-    Precise coordinate mapping for all detected text and visual elements
-  </Card>
-  <Card title="Image Metadata" icon="camera" href="/image-metadata">
-    Extract EXIF data, dimensions, and technical specifications from embedded images
-  </Card>
-  <Card title="Barcodes & QR Codes" icon="qrcode" href="/barcode">
-    Automatic detection and decoding of 1D barcodes and QR codes
-  </Card>
-  <Card title="Signatures" icon="signature" href="/signature">
-    Identify and locate handwritten signatures and initials
-  </Card>
-  <Card title="Dense Tables" icon="table" href="/dense-tables">
-    Complex spanning tables, multi-page tables, and structured data extraction
-  </Card>
-  <Card title="Redlines & Annotations" icon="pen-to-square" href="/redlines">
-    Track document changes, markup, and editorial annotations
-  </Card>
-  <Card title="Document Classification" icon="tags" href="/classify-split">
-    Intelligent document splitting and type classification
-  </Card>
-  <Card title="Advanced Features" icon="sparkles" href="/coming-soon">
-    Handwriting recognition, form fields, and enhanced table processing
+  <Card title="Tabular Summaries" icon="table" href="/coming-soon">
+    Generate intelligent summaries of tabular data and spreadsheet content
   </Card>
 </CardGroup>
 
-## Development & Integration  
+## Recipes
 
-<CardGroup cols={3}>
-  <Card title="API Reference" icon="code" href="/api-reference/introduction">
-    Complete API documentation, endpoints, parameters, and response formats
-  </Card>
-  <Card title="Examples & Recipes" icon="books" href="/resources/examples">
-    Sample schemas, enrichment prompts, RAG integrations, and use cases
-  </Card>
-  <Card title="Playground" icon="laptop" href="https://dashboard.trycardinal.ai" external>
-    Interactive testing environment for schemas and output formats
-  </Card>
-</CardGroup>
+Complete workflows for common document processing scenarios:
+<Card title="Knowledge Base" icon="book" href="/recipes/rag-implementation">
+  Build searchable knowledge bases from unstructured documents with intelligent classification and semantic chunking
+</Card>
 
-## Security & Enterprise
-
-Cardinal provides enterprise-grade security and compliance features:
-
-**Data Protection**
-- End-to-end encryption for all document uploads and API communications
-- Zero data retention policy - your documents are processed and immediately deleted
-- SOC 2 Type II compliance with regular third-party security audits
-
-**Access Control**
-- API key authentication with granular permissions and rate limiting
-- Role-based access controls for team management and document sharing
-- Audit logs for all processing activities and API access
-
-**Infrastructure**
-- AWS-hosted infrastructure with 99.9% uptime SLA
-- Auto-scaling processing clusters for consistent performance
-- Global CDN for fast document uploads from anywhere
-
+<Card title="Insurance Claims Processing" icon="shield-check" href="/recipes/insurance-claims">
+  Automate claims intake and data extraction from insurance documents with intelligent classification and structured data extraction
+</Card>
+<Card title="Healthcare Workflows" icon="heart-pulse" href="/recipes/json-extraction">
+  Process medical records and clinical documentation with automated splitting, structured data extraction, and signature verification for compliance
+</Card>
 ---
-
-## Key Highlights
-
-**We offer**  
-- **Schema-first JSON Extraction** – Provide your schema, and Cardinal maps data into it automatically
-- **Rich Tables & Annotations** – Accurately capture spanning tables, checkmarks, barcodes, signatures, and image metadata
-- **Flexible Output Modes** – Get high fidelity Markdown with bounding boxes for RAG and human review
-- **Enterprise Security** – Zero retention, SOC 2 compliance, and enterprise-grade infrastructure
-
-<Note>
-Ready to get started? Visit [trycardinal.ai](http://trycardinal.ai) to try Cardinal now!
-</Note>
-
----
-
-Need help? Contact us at **team@trycardinal.ai**
+Need help? Contact us at **team@cardinal.ai**
